app/styles/app.scss
@import "bootstrap";

$primaryColor: #5F5C46;
$secondaryColor: #E4E3DC;
$borderColor: #EDBF85;
$otherColor: #F8F287;
$anotherColor: #D1CEC3;


div{
  border-radius: 2px;
}

.container{
  background-color: $secondaryColor;
  min-height: 900px;
  position: relative;
  max-width: 100%;
}

html {
  min-height: 100%;
  box-sizing: border-box;
}


body {
  position: relative;
  margin: 0;
  padding-bottom: 6rem;
  min-height: 100%;
  font-family: "Helvetica Neue", Arial, sans-serif;
}

.navbar{
  border-radius: 0;
  background-color: $primaryColor;
  border: 4px solid $primaryColor;
  border-radius: 2px;
}

li{
  border-left: 1px solid black;
}

.daily-pic-div{
  margin-bottom: 10px;

  background-color: $otherColor;
  border: 4px ridge $borderColor;
  text-align: center;
  float:right;
  max-width: 100%;
  padding: 0;
  img{
    border-top: 4px ridge $borderColor;
    max-width: 100%;
    min-width: 100%;
  }
}

.table-head{
  max-width: 96%;
  background-color: $anotherColor;
  margin-left: 2%;
}

.table-data{
  max-width: 96%;
  margin-left: 2%;
  border-bottom: 1px solid $anotherColor;
}

#title{
  color: black;
}

.answer-form-div{
  border: 1px solid $primaryColor;
  padding: 5px;
  background-color: $anotherColor;
  textarea, input{
    min-width: 100%;
  }
}

.pic-row{
  .pic-col{
    max-width: 100%;
    margin-bottom: 10px;
    img{
      max-width: 100%;
      border: 4px ridge $borderColor;
    }
  }
}

.question-form-div{
  margin-top: 10px;
  border: 1px solid $primaryColor;
  padding: 5px;
  background-color: $anotherColor;
  textarea, input{
    min-width: 100%;
  }
}

.answer-div{
  border-bottom: 1px solid $anotherColor;
  margin-bottom: 2px;
}

#answer-table-head{
  border-bottom: 2px solid $primaryColor;
}

#delete-button{
  width: 100px;
  text-align: center;
  color: darkred;
}

#update-button{
  width: 100px;
  text-align: center;
  color: orange;
}

.question-content{
  color: black;
}

.footer {
  position: absolute;
  right: 0;
  bottom: 0;
  left: 0;
  padding: 1rem;
  background-color: $primaryColor;
  text-align: center;
  margin-top: 100%;
}

